navbar tamamlandi ve 500pxe qeder responsivlik var

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Portfolio 125</title>
 </head>
 <body>
+
     <header class="header">
         <div class="logo">
       
@@ -24,5 +25,8 @@
     <a href="">Book a call <img src="./assets/svgs/navbar-section/right-arrow.svg" alt=""></a>
 </nav>
 </header>
+
+<section class="intoduction"></section>
+
 </body>
 </html>
