--- a/index.html
+++ b/index.html
@@ -26,7 +26,26 @@
 </nav>
 </header>
 
-<section class="intoduction"></section>
+<section class="intoduction">
+    <div class="intro-left-side">
+        <h1><span>I design products</span> <br>
+            that delight and <br> inspire people.
+        </h1>
+        <p>Hi! I’m Jake, a product designer based in Berlin. I create user-friendly interfaces for fast-growing startups.</p>
+<div class="bookacall">
+    <button>Book a call</button>
+    <a href="./assets/myCV.pdf" download>Download CV <img src="./assets/svgs/navbar-section/right-arrow.svg" ></a>
+</div>
+
+
+
+    </div>
+
+    <div class="into-right-side">
+<img src="./assets/svgs/introduction-section/profilepic.svg" alt="">
+    </div>
+
+</section>
 
 </body>
 </html>
